@@ -206,6 +206,9 @@ def main(args=None):
     # Do not update .params yet, dump_metadata() may fail if the database is
     # corrupted, in which case we want to force an fsck.
     param['max_inode'] = db.get_val('SELECT MAX(id) FROM inodes')
+    if operations.failsafe:
+        log.warn('File system errors encountered, marking for fsck.')
+        param['needs_fsck'] = True
     with backend_pool() as backend:
         seq_no = get_seq_no(backend)
         if metadata_upload_thread.db_mtime == os.stat(cachepath + '.db').st_mtime:
